--- a/src/assets/mixins.styl
+++ b/src/assets/mixins.styl
@@ -3,6 +3,6 @@ title()
   background-color #f6f6f6
   border-radius 3px 3px 0 0
 ellipsis()
-  overflow: hidden
-  white-space: nowrap
-  text-overflow: ellipsis
+  overflow hidden
+  white-space nowrap
+  text-overflow ellipsis
